--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,4 +1,4 @@
-{% set version = '2.9.1' %}
+{% set version = '2.10.0' %}
 {% set posix = 'm2-' if win else '' %}
 {% set native = 'm2w64-' if win else '' %}
 
@@ -10,12 +10,11 @@ source:
   url:
     - {{ cran_mirror }}/src/contrib/Quandl_{{ version }}.tar.gz
     - {{ cran_mirror }}/src/contrib/Archive/Quandl/Quandl_{{ version }}.tar.gz
-  sha256: 19c25aa29a8ba4a4fd73bb26a2c655e74a674997eeddc17708f92f73138c2ede
+  sha256: 1956d51079ffceacd376b793b43c6f89753f87cfc5f89173605b0c9c0284834f
 
 build:
-  noarch: generic
   merge_build_host: True  # [win]
-  number: 1000
+  number: 0
   noarch: generic
   rpaths:
     - lib/R/lib/
@@ -23,7 +22,7 @@ build:
 
 requirements:
   build:
-
+    - {{posix}}zip               # [win]
   host:
     - r-base
     - r-httr >=0.6.1
@@ -55,14 +54,13 @@ about:
 extra:
   recipe-maintainers:
     - conda-forge/r
-    - philip-khor
 
 # Package: Quandl
 # Title: API Wrapper for Quandl.com
-# Version: 2.9.1
-# Date: 2018-08-14
-# Authors@R: c(person( "Raymond McTaggart", role=c("aut", "cre"), email="ray@quandl.com"), person("Gergely Daroczi", role="aut"), person("Clement Leung", role="aut", email="clement@quandl.com"), person("Quandl Inc.", role="cph"))
-# Maintainer: Raymond McTaggart <ray@quandl.com>
+# Version: 2.10.0
+# Date: 2019-05-23
+# Authors@R: c( person("Dave Dotson", role="cre", email="dave@quandl.com"), person("Raymond McTaggart", role=c("aut")), person("Gergely Daroczi", role="aut"), person("Clement Leung", role="aut"), person("Quandl Inc.", role="cph"))
+# Maintainer: Dave Dotson <dave@quandl.com>
 # Description: Functions for interacting directly with the Quandl API to offer data in a number of formats usable in R, downloading a zip with all data from a Quandl database, and the ability to search. This R package uses the Quandl API. For more information go to <https://www.quandl.com/docs/api>. For more help on the package itself go to <https://www.quandl.com/help/r>.
 # Imports: httr (>= 0.6.1), zoo, jsonlite (>= 0.9.14)
 # Suggests: testthat (>= 0.10.0), roxygen2, timeSeries
@@ -70,9 +68,9 @@ extra:
 # License: MIT + file LICENSE
 # URL: https://github.com/quandl/quandl-r
 # BugReports: https://github.com/quandl/quandl-r/issues
-# RoxygenNote: 6.1.0
+# RoxygenNote: 6.1.1
 # NeedsCompilation: no
-# Packaged: 2018-08-14 19:16:12 UTC; Rayy
-# Author: Raymond McTaggart [aut, cre], Gergely Daroczi [aut], Clement Leung [aut], Quandl Inc. [cph]
+# Packaged: 2019-06-05 19:23:15 UTC; Rayy
+# Author: Dave Dotson [cre], Raymond McTaggart [aut], Gergely Daroczi [aut], Clement Leung [aut], Quandl Inc. [cph]
 # Repository: CRAN
-# Date/Publication: 2018-08-14 19:50:03 UTC
+# Date/Publication: 2019-06-12 23:00:03 UTC
